include tag repo7

--- a/.github/actions/gh-release/action.yaml
+++ b/.github/actions/gh-release/action.yaml
@@ -5,6 +5,12 @@ author: fspiers
 inputs:
   tag:
     required: true
+  create-tag:
+    required: false
+    default: false
+  target-branch:
+    required: false
+    default: main
 
 runs:
   using: composite
@@ -16,7 +22,7 @@ runs:
       gh --version
 
       echo -e "${YELLOW}[ EXECUTING ] > Releasing on tag ${{ inputs.tag }}${BLANK}"
-      gh release create ${{ inputs.tag }} --generate-notes --latest --verify-tag
+      gh release create ${{ inputs.tag }} --generate-notes --latest --verify-tag=${{ inputs.create-tag }} --target=${{ inputs.target-branch }}
     shell: bash
     env:
       RED: \033[1;31m
