--- a/.github/actions/change-action-ref/action.yaml
+++ b/.github/actions/change-action-ref/action.yaml
@@ -24,13 +24,13 @@ runs:
     run: |
       for file in ${{ inputs.workflows-directory }}
       do
-        for line in $(yq e '.jobs[].steps[].uses | select(.=="'"${{ inputs.actions-source }}"'*@*")' $file)
+        for line in $(yq e '.jobs[].steps[].uses | select(.) | select(.=="'"${{ inputs.actions-source }}"'*@*")' $file)
         do
           ACTION=$(echo "$line" | awk -F/ '{print $NF}')
           REF=$(echo "$line" | awk -F@ '{print $NF}')
           if [[ "$REF" != "${{ inputs.new-ref }}" ]]; then
             echo -e "${CYAN}[ INFO ] > File ${YELLOW}$file${CYAN} and action ${PURPLE}$ACTION${CYAN} is currently set to ref ${RED}$REF${CYAN} and will be changed to ${GREEN}${{ inputs.new-ref }}${BLANK}"
-            yq e -i '.jobs[].steps[].uses |= select(.=="'"$line"'") |= sub("'"@$REF"'", "'"@${{ inputs.new-ref }}"'")' $file
+            yq e -i '.jobs[].steps[] |= select(.uses).uses |= select(.=="'"$line"'") |= sub("'"@$REF"'", "'"@${{ inputs.new-ref }}"'")' $file
           else
             echo -e "${PURPLE}[ CANCEL ] > File ${YELLOW}$file${PURPLE} and action ${RED}$ACTION${PURPLE} is already set to ${RED}${{ inputs.new-ref }}${PURPLE} ref${BLANK}"
           fi
