--- a/.github/workflows/helm-build-parallel.yaml
+++ b/.github/workflows/helm-build-parallel.yaml
@@ -214,7 +214,7 @@ jobs:
       image: ${{ inputs.ci-image }}
     steps:
       - name: Clone code
-        uses: actions/checkout@v3
+        uses: actions/checkout@test
       - name: Helm unit testing
         uses: ixxeL-actions/workflows/.github/actions/helm-unittest@main
         with:
@@ -231,7 +231,7 @@ jobs:
     steps:
       - name: Clone code
         id: clone
-        uses: actions/checkout@v3
+        uses: actions/checkout@test
       - name: Helm templating
         uses: ixxeL-actions/workflows/.github/actions/helm-template@main
         with:
