--- a/.github/workflows/auto-tag.yaml
+++ b/.github/workflows/auto-tag.yaml
@@ -109,11 +109,11 @@ jobs:
           target-branch: ${{ inputs.release-target-branch }}
         env:
           GH_TOKEN: ${{ github.token }}
-      - name: Extrat Major
+      - name: Extract Major
         id: extract-major
         run: |
           if [[ "${{ inputs.new-ref }}" =~ ^v?[0-9]+\.[0-9]+\.[0-9]+ ]]; then
-            BASE_VERSION=$(echo "${{ inputs.new-ref }}" | grep -Eo "^v?[0-9]{1})
+            BASE_VERSION=$(echo "${{ inputs.new-ref }}" | grep -Eo "^v?[0-9]{1}")
             echo "BASE_VERSION=$BASE_VERSION" >> $GITHUB_OUTPUT
           fi
       - name: Git update base tag
