--- a/.github/workflows/auto-tag.yaml
+++ b/.github/workflows/auto-tag.yaml
@@ -68,14 +68,14 @@ jobs:
           token: ${{ secrets.git-token }}
       - name: substitute-ref
         id: substitute-ref
-        uses: ixxeL-actions/workflows/.github/actions/change-action-ref@main
+        uses: ixxeL-actions/workflows/.github/actions/change-action-ref@v1.0.2
         with:
           workflows-directory: ${{ inputs.workflows-directory }}
           actions-source: ${{ inputs.actions-source }}
           new-ref: ${{ inputs.new-ref }}
       - name: Git config
         id: git-config
-        uses: ixxeL-actions/workflows/.github/actions/git-config@main
+        uses: ixxeL-actions/workflows/.github/actions/git-config@v1.0.2
         with:
           git-workdir: ${{ inputs.workingdir }}
       # - name: Update changelog
@@ -86,7 +86,7 @@ jobs:
       #     release-name: ${{ inputs.new-ref }}
       - name: Git push
         id: git-push
-        uses: ixxeL-actions/workflows/.github/actions/git-push@main
+        uses: ixxeL-actions/workflows/.github/actions/git-push@v1.0.2
         with:
           git-msg: ':package: CI release version ${{ inputs.new-ref }} from user ${GITHUB_ACTOR} [skip ci]'
           git-workdir: ${{ inputs.workingdir }}
@@ -102,7 +102,7 @@ jobs:
       #     push-option: ${{ inputs.push-option }}
       - name: GH Release
         id: gh-release
-        uses: ixxeL-actions/workflows/.github/actions/gh-release@main
+        uses: ixxeL-actions/workflows/.github/actions/gh-release@v1.0.2
         with:
           tag: ${{ inputs.new-ref }}
           verify-tag: ${{ inputs.release-verify-tag }}
@@ -118,13 +118,13 @@ jobs:
           fi
       - name: Delete git tag
         id: git-tag-delete
-        uses: ixxeL-actions/workflows/.github/actions/git-tag-delete@main
+        uses: ixxeL-actions/workflows/.github/actions/git-tag-delete@v1.0.2
         with:
           tag: ${{ steps.extract-major.outputs.BASE_VERSION }}
       - name: Git update base tag
         id: git-tag
         # if: inputs.update-base-tag == 'true'
-        uses: ixxeL-actions/workflows/.github/actions/git-tag@main
+        uses: ixxeL-actions/workflows/.github/actions/git-tag@v1.0.2
         with:
           tag-msg: 'update tag semver [skip ci]'
           tag-value: ${{ steps.extract-major.outputs.BASE_VERSION }}
