--- a/.github/actions/git-tag-delete/action.yaml
+++ b/.github/actions/git-tag-delete/action.yaml
@@ -28,7 +28,9 @@ runs:
       echo -e "${YELLOW}[ EXECUTING ] > Deleting git tag ${{ inputs.tag }}${BLANK}"
 
       if [[ $(git ls-remote --tags origin | awk -F' ' '{print $NF}' | awk -F/ '{print $NF}' | grep -Eo "^${{ inputs.tag }}") ]]; then
-        git -C ${{ inputs.git-workdir }} tag -d origin ${{ inputs.tag }}
+        echo -e "${YELLOW}[ EXECUTING ] > Deleting tag ${{ inputs.tag }}${BLANK}"
+        # git -C ${{ inputs.git-workdir }} tag -d ${{ inputs.tag }}
+        git -C ${{ inputs.git-workdir }} push --delete origin ${{ inputs.tag }}
       else
         echo -e "${CYAN}[ INFO ] > Tag is not present. No need to delete${BLANK}"
       fi
