--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -227,7 +227,7 @@ jobs:
           fetch-depth: '0'
       - name: Set version
         id: set-version
-        uses: ixxeL-actions/workflows/.github/actions/set-version@main
+        uses: ixxeL-actions/workflows/.github/actions/set-version@v1.0.4
         with:
           component: ${{ inputs.component }}
       - name: Set variables
@@ -241,7 +241,7 @@ jobs:
       - name: Podman login
         id: podman-login
         if: ${{ inputs.podman-registry != null }}
-        uses: ixxeL-actions/workflows/.github/actions/podman-login@main
+        uses: ixxeL-actions/workflows/.github/actions/podman-login@v1.0.4
         with:
           podman-docker: ${{ inputs.podman-docker }}
           docker-config: ${{ inputs.docker-config }}
@@ -253,7 +253,7 @@ jobs:
           docker-hub-login: ${{ inputs.docker-hub-login }}
       - name: Buildkit build
         id: buildkit-build
-        uses: ixxeL-actions/workflows/.github/actions/buildkit@main
+        uses: ixxeL-actions/workflows/.github/actions/buildkit@v1.0.4
         with:
           workingdir: ${{ inputs.workingdir }}
           img-name: ${{ inputs.img-name }}
@@ -271,7 +271,7 @@ jobs:
           oci-worker-snapshotter: ${{ inputs.oci-worker-snapshotter }}
       - name: Grype scan
         id: grype-scan
-        uses: ixxeL-actions/workflows/.github/actions/grype@main
+        uses: ixxeL-actions/workflows/.github/actions/grype@v1.0.4
         continue-on-error: true
         with:
           image-ref: ${{ inputs.target-dir }}/${{ inputs.img-name }}.tar
@@ -284,13 +284,13 @@ jobs:
       - name: Git config
         id: git-config
         if: contains( github.ref, 'release' ) || contains( github.base_ref, 'release' )
-        uses: ixxeL-actions/workflows/.github/actions/git-config@main
+        uses: ixxeL-actions/workflows/.github/actions/git-config@v1.0.4
         with:
           git-workdir: ${{ inputs.git-workdir }}
       - name: git tag
         id: git-tag
         if: contains( github.ref, 'release' ) || contains( github.base_ref, 'release' )
-        uses: ixxeL-actions/workflows/.github/actions/git-tag@main
+        uses: ixxeL-actions/workflows/.github/actions/git-tag@v1.0.4
         with:
           tag-msg: 'CI release of ${{ inputs.component }} version ${{ steps.set-version.outputs.PROJECT_SHORT_VERSION }}'
           tag-value: ${{ steps.set-version.outputs.PROJECT_SHORT_VERSION }}
