--- a/.github/actions/git-tag-delete/action.yaml
+++ b/.github/actions/git-tag-delete/action.yaml
@@ -25,6 +25,7 @@ runs:
       echo -e "${CYAN}[ INFO ] > git origin.${BLANK}"
       git -C ${{ inputs.git-workdir }} remote show origin
 
+      echo -e "${CYAN}[ INFO ] > git remote tag${BLANK}"
       git ls-remote --tags origin
       if [[ $(git ls-remote --tags origin | awk -F' ' '{print $NF}' | awk -F/ '{print $NF}' | grep -Eo "^${{ inputs.tag }}") ]]; then
         echo -e "${YELLOW}[ EXECUTING ] > Deleting tag ${{ inputs.tag }}${BLANK}"
