--- a/.github/workflows/auto-tag.yaml
+++ b/.github/workflows/auto-tag.yaml
@@ -75,7 +75,7 @@ jobs:
           new-ref: ${{ inputs.new-ref }}
       - name: Git config
         id: git-config
-        uses: ixxeL-actions/workflows/.github/actions/git-config@v1.0.4
+        uses: ixxeL-actions/workflows/.github/actions/git-config@main
         with:
           git-workdir: ${{ inputs.workingdir }}
       # - name: Update changelog
@@ -86,7 +86,7 @@ jobs:
       #     release-name: ${{ inputs.new-ref }}
       - name: Git push
         id: git-push
-        uses: ixxeL-actions/workflows/.github/actions/git-push@v1.0.4
+        uses: ixxeL-actions/workflows/.github/actions/git-push@main
         with:
           git-msg: ':package: CI release version ${{ inputs.new-ref }} from user ${GITHUB_ACTOR} [skip ci]'
           git-workdir: ${{ inputs.workingdir }}
@@ -102,7 +102,7 @@ jobs:
       #     push-option: ${{ inputs.push-option }}
       - name: GH Release
         id: gh-release
-        uses: ixxeL-actions/workflows/.github/actions/gh-release@v1.0.4
+        uses: ixxeL-actions/workflows/.github/actions/gh-release@main
         with:
           tag: ${{ inputs.new-ref }}
           verify-tag: ${{ inputs.release-verify-tag }}
@@ -116,16 +116,21 @@ jobs:
             BASE_VERSION=$(echo "${{ inputs.new-ref }}" | grep -Eo "^v?[0-9]{1}")
             echo "BASE_VERSION=$BASE_VERSION" >> $GITHUB_OUTPUT
           fi
+      - name: Clone code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: '0'
+          token: ${{ secrets.git-token }}
       - name: Delete git tag
         id: git-tag-delete
-        uses: ixxeL-actions/workflows/.github/actions/git-tag-delete@v1.0.4
+        uses: ixxeL-actions/workflows/.github/actions/git-tag-delete@main
         with:
           tag: ${{ steps.extract-major.outputs.BASE_VERSION }}
           git-workdir: ${{ inputs.workingdir }}
       - name: Git update base tag
         id: git-tag
         # if: inputs.update-base-tag == 'true'
-        uses: ixxeL-actions/workflows/.github/actions/git-tag@v1.0.4
+        uses: ixxeL-actions/workflows/.github/actions/git-tag@main
         with:
           tag-msg: 'update tag semver [skip ci]'
           tag-value: ${{ steps.extract-major.outputs.BASE_VERSION }}
