--- a/.github/workflows/AUTO_TAG.yaml
+++ b/.github/workflows/AUTO_TAG.yaml
@@ -3,15 +3,25 @@ name: Auto tag workflows
 on:
   workflow_dispatch:
     inputs:
-      new-ref:
+      increment:
         required: true
-        type: string
+        type: choice
+        options:
+        - "fix"
+        - "minor"
+        - "major"
+        default: "fix"
+        description: Kind of version bump
+      # new-ref:
+      #   required: true
+      #   type: string
 
 jobs:
-  retag-img:
+  auto-tag-repo:
     uses: ixxeL-actions/workflows/.github/workflows/auto-tag.yaml@main
     with:
-      new-ref: ${{ inputs.new-ref }}
+      # new-ref: ${{ inputs.new-ref }}
+      increment: ${{ inputs.increment }}
       git-workdir: .github
     secrets:
       git-token: ${{ secrets.PAT }}
