--- a/.github/workflows/auto-tag.yaml
+++ b/.github/workflows/auto-tag.yaml
@@ -53,10 +53,14 @@ on:
         required: false
         default: ${{ github.ref_name }}
         type: string
+      increment:
+        required: false
+        default: fix
+        type: string
 jobs:
-  auto-tag:
-    name: auto-tag
-    timeout-minutes: 3
+  auto-tag-repo:
+    name: auto-tag-repo
+    timeout-minutes: 5
     runs-on: ${{ inputs.runs-on }}
     container:
       image: ${{ inputs.ci-image }}
@@ -66,13 +70,25 @@ jobs:
         with:
           fetch-depth: '0'
           token: ${{ secrets.git-token }}
-      - name: substitute-ref
+      - name: Get last tag
+        id: get-last-tag
+        uses: ixxeL-actions/workflows/.github/actions/git-get-last-tag@main
+        with:
+          git-workdir: ${{ inputs.workingdir }}
+      - name: Bump version
+        id: bump-version
+        uses: ixxeL-actions/workflows/.github/actions/bump-version@main
+        with:
+          increment: ${{ inputs.chart-increment }}
+          current-version: ${{ steps.get-last-tag.outputs.LAST_TAG }}
+      - name: Substitute ref
         id: substitute-ref
         uses: ixxeL-actions/workflows/.github/actions/change-action-ref@main
         with:
           workflows-directory: ${{ inputs.workflows-directory }}
           actions-source: ${{ inputs.actions-source }}
-          new-ref: ${{ inputs.new-ref }}
+          # new-ref: ${{ inputs.new-ref }}
+          new-ref: ${{ steps.bump-version.outputs.VERSION }}
       - name: Git config
         id: git-config
         uses: ixxeL-actions/workflows/.github/actions/git-config@main
@@ -88,7 +104,7 @@ jobs:
         id: git-push
         uses: ixxeL-actions/workflows/.github/actions/git-push@main
         with:
-          git-msg: ':package: CI release version ${{ inputs.new-ref }} from user ${GITHUB_ACTOR} [skip ci]'
+          git-msg: ':package: CI release version ${{ steps.bump-version.outputs.VERSION }} from user ${GITHUB_ACTOR} [skip ci]'
           git-workdir: ${{ inputs.workingdir }}
           git-staging-dir: ${{ inputs.workingdir }}
           push-option: ${{ inputs.push-option }}
@@ -96,15 +112,15 @@ jobs:
       #   id: git-tag
       #   uses: ixxeL-actions/workflows/.github/actions/git-tag@main
       #   with:
-      #     tag-msg: ':package: CI release version ${{ inputs.new-ref }} from user ${GITHUB_ACTOR} [skip ci]'
-      #     tag-value: ${{ inputs.new-ref }}
+      #     tag-msg: ':package: CI release version ${{ steps.bump-version.outputs.VERSION }} from user ${GITHUB_ACTOR} [skip ci]'
+      #     tag-value: ${{ steps.bump-version.outputs.VERSION }}
       #     git-workdir: ${{ inputs.workingdir }}
       #     push-option: ${{ inputs.push-option }}
       - name: GH Release
         id: gh-release
         uses: ixxeL-actions/workflows/.github/actions/gh-release@main
         with:
-          tag: ${{ inputs.new-ref }}
+          tag: ${{ steps.bump-version.outputs.VERSION }}
           verify-tag: ${{ inputs.release-verify-tag }}
           target-branch: ${{ inputs.release-target-branch }}
         env:
@@ -112,8 +128,8 @@ jobs:
       - name: Extract Major
         id: extract-major
         run: |
-          if [[ "${{ inputs.new-ref }}" =~ ^v?[0-9]+\.[0-9]+\.[0-9]+ ]]; then
-            BASE_VERSION=$(echo "${{ inputs.new-ref }}" | grep -Eo "^v?[0-9]{1}")
+          if [[ "${{ steps.bump-version.outputs.VERSION }}" =~ ^v?[0-9]+\.[0-9]+\.[0-9]+ ]]; then
+            BASE_VERSION=$(echo "${{ steps.bump-version.outputs.VERSION }}" | grep -Eo "^v?[0-9]{1}")
             echo "BASE_VERSION=$BASE_VERSION" >> $GITHUB_OUTPUT
           fi
       - name: Delete git tag
