--- a/.github/actions/bump-version/action.yaml
+++ b/.github/actions/bump-version/action.yaml
@@ -33,8 +33,8 @@ runs:
         VERSION="${{ inputs.current-version }}"
         if [[ ${VERSION} =~ ${REGEX} ]]
         then
-          ver=( ${VERSION//./ } )
-          ver=( ${ver//v/ } )
+          ver=( ${VERSION//v/ } )
+          ver=( ${ver//./ } )
           if [[ ${{ inputs.increment }} = "fix" ]]
           then
             echo -e "${CYAN}[ INFO ] > Fix increment${BLANK}"
