--- a/.github/workflows/auto-tag.yaml
+++ b/.github/workflows/auto-tag.yaml
@@ -72,23 +72,23 @@ jobs:
           token: ${{ secrets.git-token }}
       - name: Git config
         id: git-config
-        uses: ixxeL-actions/workflows/.github/actions/git-config@v1.0.1
+        uses: ixxeL-actions/workflows/.github/actions/git-config@main
         with:
           git-workdir: ${{ inputs.workingdir }}
       - name: Get last tag
         id: get-last-tag
-        uses: ixxeL-actions/workflows/.github/actions/git-get-last-tag@v1.0.1
+        uses: ixxeL-actions/workflows/.github/actions/git-get-last-tag@main
         with:
           git-workdir: ${{ inputs.workingdir }}
       - name: Bump version
         id: bump-version
-        uses: ixxeL-actions/workflows/.github/actions/bump-version@v1.0.1
+        uses: ixxeL-actions/workflows/.github/actions/bump-version@main
         with:
           increment: ${{ inputs.increment }}
           current-version: ${{ steps.get-last-tag.outputs.LAST_TAG }}
       - name: Substitute ref
         id: substitute-ref
-        uses: ixxeL-actions/workflows/.github/actions/change-action-ref@v1.0.1
+        uses: ixxeL-actions/workflows/.github/actions/change-action-ref@main
         with:
           workflows-directory: ${{ inputs.workflows-directory }}
           actions-source: ${{ inputs.actions-source }}
@@ -102,7 +102,7 @@ jobs:
       #     release-name: ${{ inputs.new-ref }}
       - name: Git push
         id: git-push
-        uses: ixxeL-actions/workflows/.github/actions/git-push@v1.0.1
+        uses: ixxeL-actions/workflows/.github/actions/git-push@main
         with:
           git-msg: ':package: CI release version ${{ steps.bump-version.outputs.VERSION }} from user ${GITHUB_ACTOR} [skip ci]'
           git-workdir: ${{ inputs.workingdir }}
@@ -118,7 +118,7 @@ jobs:
       #     push-option: ${{ inputs.push-option }}
       - name: GH Release
         id: gh-release
-        uses: ixxeL-actions/workflows/.github/actions/gh-release@v1.0.1
+        uses: ixxeL-actions/workflows/.github/actions/gh-release@main
         with:
           tag: ${{ steps.bump-version.outputs.VERSION }}
           verify-tag: ${{ inputs.release-verify-tag }}
@@ -134,14 +134,14 @@ jobs:
           fi
       - name: Delete git tag
         id: git-tag-delete
-        uses: ixxeL-actions/workflows/.github/actions/git-tag-delete@v1.0.1
+        uses: ixxeL-actions/workflows/.github/actions/git-tag-delete@main
         with:
           tag: ${{ steps.extract-major.outputs.BASE_VERSION }}
           git-workdir: ${{ inputs.workingdir }}
       - name: Git update base tag
         id: git-tag
         # if: inputs.update-base-tag == 'true'
-        uses: ixxeL-actions/workflows/.github/actions/git-tag@v1.0.1
+        uses: ixxeL-actions/workflows/.github/actions/git-tag@main
         with:
           tag-msg: 'update tag semver [skip ci]'
           tag-value: ${{ steps.extract-major.outputs.BASE_VERSION }}
@@ -151,7 +151,7 @@ jobs:
       - name: Git revert to main
         id: git-revert
         # if: inputs.update-base-tag == 'true'
-        uses: ixxeL-actions/workflows/.github/actions/git-revert@v1.0.1
+        uses: ixxeL-actions/workflows/.github/actions/git-revert@main
         with:
           git-workdir: ${{ inputs.workingdir }}
           push-option: ${{ inputs.push-option }}
